[package]
name = "block-pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.14", features = ["abigen", "rustls", "ws", "ethers-solc"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

eyre = "0.6.12"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = "=0.11.27"